--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.content {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 10%;
